file(GLOB SRC_FILES "*.cpp")
foreach(src_file ${SRC_FILES})
   get_filename_component(exe_name ${src_file} NAME_WE)
   add_executable(${exe_name} ${src_file})
endforeach()

target_link_libraries(handle_signal Boost::program_options)
target_link_libraries(client Boost::program_options)
target_link_libraries(boost_process_issue_503 PUBLIC Boost::process)
target_link_libraries(boost_process_issue_516 PUBLIC Boost::process)
